--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 30,
       "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
       "metadata": {
         "id": "718192dc-3123-4958-a3b6-46379f52e9dd"
@@ -4817,8 +4817,7 @@
       "source": [
         "#si-exercise\n",
         "import pandas as pd\n",
-        "data = pd.read_csv (\"https://raw.githubusercontent.com/dustywhite7/pythonMikkeli/master/exampleData/roomOccupancy.csv\")\n",
-        "occupancy = pd.DataFrame(data)"
+        "occupancy = pd.read_csv (\"https://raw.githubusercontent.com/dustywhite7/pythonMikkeli/master/exampleData/roomOccupancy.csv\")"
       ]
     },
     {
@@ -4833,7 +4832,7 @@
         "id": "G1LhGysTj1h_"
       },
       "id": "G1LhGysTj1h_",
-      "execution_count": 27,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -4849,7 +4848,7 @@
         "id": "ITPE2B7Zksex"
       },
       "id": "ITPE2B7Zksex",
-      "execution_count": 28,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -4858,14 +4857,14 @@
         "print(occupancy.head())"
       ],
       "metadata": {
-        "id": "ZOOoOxQglFyU",
-        "outputId": "32518df6-b30b-46f1-8794-cafcfcfdd68f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZOOoOxQglFyU",
+        "outputId": "f4326271-d7a6-48ec-e457-73b5ad43f1a7"
       },
       "id": "ZOOoOxQglFyU",
-      "execution_count": 29,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
