--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 52,
       "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
       "metadata": {
         "id": "718192dc-3123-4958-a3b6-46379f52e9dd"
@@ -4817,7 +4817,8 @@
       "source": [
         "#si-exercise\n",
         "import pandas as pd\n",
-        "occupancy = pd.read_csv (\"https://raw.githubusercontent.com/dustywhite7/pythonMikkeli/master/exampleData/roomOccupancy.csv\")"
+        "data = pd.read_csv (\"https://raw.githubusercontent.com/dustywhite7/pythonMikkeli/master/exampleData/roomOccupancy.csv\")\n",
+        "occupancy = pd.DataFrame(data)\n"
       ]
     },
     {
@@ -4827,13 +4828,52 @@
         "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name ()\n",
         "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
         "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
-        "occupancy = occupancy.drop(columns = [\"date\"])"
+        "occupancy.set_index([\"day_of_week\",\"hour\",\"minute\"])\n",
+        "occupancy = occupancy.drop(columns = [\"date\"])\n",
+        "print(occupancy.head())\n",
+        "\n"
       ],
       "metadata": {
-        "id": "G1LhGysTj1h_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G1LhGysTj1h_",
+        "outputId": "ca8fbf5f-c523-47c5-f410-f0f992d40ace"
       },
       "id": "G1LhGysTj1h_",
-      "execution_count": 34,
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Temperature  Humidity  Light     CO2  HumidityRatio  Occupancy day_of_week  \\\n",
+            "0        23.18   27.2720  426.0  721.25       0.004793          1   Wednesday   \n",
+            "1        23.15   27.2675  429.5  714.00       0.004783          1   Wednesday   \n",
+            "2        23.15   27.2450  426.0  713.50       0.004779          1   Wednesday   \n",
+            "3        23.15   27.2000  426.0  708.25       0.004772          1   Wednesday   \n",
+            "4        23.10   27.2000  426.0  704.50       0.004757          1   Wednesday   \n",
+            "\n",
+            "   hour  minute  \n",
+            "0    17      51  \n",
+            "1    17      51  \n",
+            "2    17      53  \n",
+            "3    17      54  \n",
+            "4    17      55  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "4TGvGXHXqXLr"
+      },
+      "id": "4TGvGXHXqXLr",
+      "execution_count": null,
       "outputs": []
     },
     {
