--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 58,
       "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
       "metadata": {
         "id": "718192dc-3123-4958-a3b6-46379f52e9dd"
@@ -4825,11 +4825,10 @@
       "cell_type": "code",
       "source": [
         "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
-        "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name ()\n",
+        "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_of_week\n",
         "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
         "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
         "occupancy.set_index([\"day_of_week\",\"hour\",\"minute\"])\n",
-        "occupancy = occupancy.drop(columns = [\"date\"])\n",
         "print(occupancy.head())\n",
         "\n"
       ],
@@ -4838,28 +4837,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G1LhGysTj1h_",
-        "outputId": "ca8fbf5f-c523-47c5-f410-f0f992d40ace"
+        "outputId": "602c4f4a-29e9-4fcf-9bae-147e2ee3c09a"
       },
       "id": "G1LhGysTj1h_",
-      "execution_count": 56,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   Temperature  Humidity  Light     CO2  HumidityRatio  Occupancy day_of_week  \\\n",
-            "0        23.18   27.2720  426.0  721.25       0.004793          1   Wednesday   \n",
-            "1        23.15   27.2675  429.5  714.00       0.004783          1   Wednesday   \n",
-            "2        23.15   27.2450  426.0  713.50       0.004779          1   Wednesday   \n",
-            "3        23.15   27.2000  426.0  708.25       0.004772          1   Wednesday   \n",
-            "4        23.10   27.2000  426.0  704.50       0.004757          1   Wednesday   \n",
+            "                 date  Temperature  Humidity  Light     CO2  HumidityRatio  \\\n",
+            "0 2015-02-04 17:51:00        23.18   27.2720  426.0  721.25       0.004793   \n",
+            "1 2015-02-04 17:51:59        23.15   27.2675  429.5  714.00       0.004783   \n",
+            "2 2015-02-04 17:53:00        23.15   27.2450  426.0  713.50       0.004779   \n",
+            "3 2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
+            "4 2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
             "\n",
-            "   hour  minute  \n",
-            "0    17      51  \n",
-            "1    17      51  \n",
-            "2    17      53  \n",
-            "3    17      54  \n",
-            "4    17      55  \n"
+            "   Occupancy  day_of_week  hour  minute  \n",
+            "0          1            2    17      51  \n",
+            "1          1            2    17      51  \n",
+            "2          1            2    17      53  \n",
+            "3          1            2    17      54  \n",
+            "4          1            2    17      55  \n"
           ]
         }
       ]
