--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 62,
       "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
       "metadata": {
         "id": "718192dc-3123-4958-a3b6-46379f52e9dd"
@@ -4825,7 +4825,7 @@
       "cell_type": "code",
       "source": [
         "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
-        "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_of_week\n",
+        "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.dayofweek\n",
         "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
         "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
         "occupancy.set_index([\"day_of_week\",\"hour\",\"minute\"])\n",
@@ -4837,10 +4837,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G1LhGysTj1h_",
-        "outputId": "602c4f4a-29e9-4fcf-9bae-147e2ee3c09a"
+        "outputId": "b558ca70-9319-4dcd-f32c-9861ba205925"
       },
       "id": "G1LhGysTj1h_",
-      "execution_count": 60,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
