--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4825,7 +4825,7 @@
       "cell_type": "code",
       "source": [
         "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
-        "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name()\n",
+        "occupancy[\"day\"] = occupancy[\"date\"].dt.day_name()\n",
         "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
         "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
         "occupancy.set_index([\"day_of_week\",\"hour\",\"minute\"])\n",
@@ -4837,10 +4837,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G1LhGysTj1h_",
-        "outputId": "50eaef44-f567-4f47-8d33-e82cedd08049"
+        "outputId": "d1f1aeec-0cdb-4529-8884-efd95d18d699"
       },
       "id": "G1LhGysTj1h_",
-      "execution_count": 68,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -4853,12 +4853,12 @@
             "3 2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
             "4 2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
             "\n",
-            "   Occupancy day_of_week  hour  minute  \n",
-            "0          1   Wednesday    17      51  \n",
-            "1          1   Wednesday    17      51  \n",
-            "2          1   Wednesday    17      53  \n",
-            "3          1   Wednesday    17      54  \n",
-            "4          1   Wednesday    17      55  \n"
+            "   Occupancy day_of_week  hour  minute        day  \n",
+            "0          1   Wednesday    17      51  Wednesday  \n",
+            "1          1   Wednesday    17      51  Wednesday  \n",
+            "2          1   Wednesday    17      53  Wednesday  \n",
+            "3          1   Wednesday    17      54  Wednesday  \n",
+            "4          1   Wednesday    17      55  Wednesday  \n"
           ]
         }
       ]
