--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 73,
       "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
       "metadata": {
         "id": "718192dc-3123-4958-a3b6-46379f52e9dd"
@@ -4825,48 +4825,22 @@
       "cell_type": "code",
       "source": [
         "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
-        "occupancy[\"day\"] = occupancy[\"date\"].dt.day_name()\n",
+        "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name()\n",
         "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
         "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
-        "occupancy.set_index([\"day_of_week\",\"hour\",\"minute\"])\n",
-        "print(occupancy.head())\n",
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "G1LhGysTj1h_",
-        "outputId": "d1f1aeec-0cdb-4529-8884-efd95d18d699"
+        "id": "G1LhGysTj1h_"
       },
       "id": "G1LhGysTj1h_",
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "                 date  Temperature  Humidity  Light     CO2  HumidityRatio  \\\n",
-            "0 2015-02-04 17:51:00        23.18   27.2720  426.0  721.25       0.004793   \n",
-            "1 2015-02-04 17:51:59        23.15   27.2675  429.5  714.00       0.004783   \n",
-            "2 2015-02-04 17:53:00        23.15   27.2450  426.0  713.50       0.004779   \n",
-            "3 2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
-            "4 2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
-            "\n",
-            "   Occupancy day_of_week  hour  minute        day  \n",
-            "0          1   Wednesday    17      51  Wednesday  \n",
-            "1          1   Wednesday    17      51  Wednesday  \n",
-            "2          1   Wednesday    17      53  Wednesday  \n",
-            "3          1   Wednesday    17      54  Wednesday  \n",
-            "4          1   Wednesday    17      55  Wednesday  \n"
-          ]
-        }
-      ]
+      "execution_count": 75,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "print(occupancy.head())\n"
       ],
       "metadata": {
         "id": "4TGvGXHXqXLr"
