--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 78,
       "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
       "metadata": {
         "id": "718192dc-3123-4958-a3b6-46379f52e9dd"
@@ -4825,7 +4825,7 @@
       "cell_type": "code",
       "source": [
         "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
-        "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name()\n",
+        "occupancy[\"day\"] = occupancy[\"date\"].dt.day_of_week\n",
         "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
         "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
         "\n"
@@ -4834,7 +4834,7 @@
         "id": "G1LhGysTj1h_"
       },
       "id": "G1LhGysTj1h_",
-      "execution_count": 75,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -4843,11 +4843,35 @@
         "print(occupancy.head())\n"
       ],
       "metadata": {
-        "id": "4TGvGXHXqXLr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4TGvGXHXqXLr",
+        "outputId": "154379a3-4287-4647-ca3c-61ed175d1256"
       },
       "id": "4TGvGXHXqXLr",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                 date  Temperature  Humidity  Light     CO2  HumidityRatio  \\\n",
+            "0 2015-02-04 17:51:00        23.18   27.2720  426.0  721.25       0.004793   \n",
+            "1 2015-02-04 17:51:59        23.15   27.2675  429.5  714.00       0.004783   \n",
+            "2 2015-02-04 17:53:00        23.15   27.2450  426.0  713.50       0.004779   \n",
+            "3 2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
+            "4 2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
+            "\n",
+            "   Occupancy day_of_week  hour  minute  day  \n",
+            "0          1   Wednesday    17      51    2  \n",
+            "1          1   Wednesday    17      51    2  \n",
+            "2          1   Wednesday    17      53    2  \n",
+            "3          1   Wednesday    17      54    2  \n",
+            "4          1   Wednesday    17      55    2  \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
