--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 80,
       "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
       "metadata": {
         "id": "718192dc-3123-4958-a3b6-46379f52e9dd"
@@ -4825,7 +4825,7 @@
       "cell_type": "code",
       "source": [
         "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
-        "occupancy[\"day\"] = occupancy[\"date\"].dt.day_of_week\n",
+        "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_of_week\n",
         "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
         "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
         "\n"
@@ -4834,7 +4834,7 @@
         "id": "G1LhGysTj1h_"
       },
       "id": "G1LhGysTj1h_",
-      "execution_count": 79,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -4847,10 +4847,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4TGvGXHXqXLr",
-        "outputId": "154379a3-4287-4647-ca3c-61ed175d1256"
+        "outputId": "f9ace203-d020-4810-ba43-7532a9301a50"
       },
       "id": "4TGvGXHXqXLr",
-      "execution_count": 77,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -4863,12 +4863,12 @@
             "3 2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
             "4 2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
             "\n",
-            "   Occupancy day_of_week  hour  minute  day  \n",
-            "0          1   Wednesday    17      51    2  \n",
-            "1          1   Wednesday    17      51    2  \n",
-            "2          1   Wednesday    17      53    2  \n",
-            "3          1   Wednesday    17      54    2  \n",
-            "4          1   Wednesday    17      55    2  \n"
+            "   Occupancy  day_of_week  hour  minute  \n",
+            "0          1            2    17      51  \n",
+            "1          1            2    17      51  \n",
+            "2          1            2    17      53  \n",
+            "3          1            2    17      54  \n",
+            "4          1            2    17      55  \n"
           ]
         }
       ]
