--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4808,7 +4808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 96,
       "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
       "metadata": {
         "id": "718192dc-3123-4958-a3b6-46379f52e9dd"
@@ -4822,7 +4822,12 @@
         "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
         "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name()\n",
         "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
-        "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute"
+        "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
+        "light_avg = occupancy[\"Light\"].mean()\n",
+        "temp_avg = occupancy[\"Temperature\"].mean()\n",
+        "humidity_avg = occupancy[\"Humidity\"].mean()\n",
+        "occupancy[\"bright\"] = (occupancy[\"Light\"] > light_avg).astype(int)\n",
+        "occupancy[\"steamy\"] = ((occupancy[\"Humidity\"] > humidity_avg) & (occupancy[\"Temperature\"] > temp_avg)).astype(int)"
       ]
     },
     {
