--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4908,28 +4908,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZOOoOxQglFyU",
-        "outputId": "ba6e60a4-733b-4664-8ede-f1123168953d"
+        "outputId": "8324b35c-91f2-4b0d-f5e1-8dc1367c2975"
       },
       "id": "ZOOoOxQglFyU",
-      "execution_count": 35,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "   Temperature  Humidity  Light     CO2  HumidityRatio  Occupancy day_of_week  \\\n",
-            "0        23.18   27.2720  426.0  721.25       0.004793          1   Wednesday   \n",
-            "1        23.15   27.2675  429.5  714.00       0.004783          1   Wednesday   \n",
-            "2        23.15   27.2450  426.0  713.50       0.004779          1   Wednesday   \n",
-            "3        23.15   27.2000  426.0  708.25       0.004772          1   Wednesday   \n",
-            "4        23.10   27.2000  426.0  704.50       0.004757          1   Wednesday   \n",
+            "                 date  Temperature  Humidity  Light     CO2  HumidityRatio  \\\n",
+            "0 2015-02-04 17:51:00        23.18   27.2720  426.0  721.25       0.004793   \n",
+            "1 2015-02-04 17:51:59        23.15   27.2675  429.5  714.00       0.004783   \n",
+            "2 2015-02-04 17:53:00        23.15   27.2450  426.0  713.50       0.004779   \n",
+            "3 2015-02-04 17:54:00        23.15   27.2000  426.0  708.25       0.004772   \n",
+            "4 2015-02-04 17:55:00        23.10   27.2000  426.0  704.50       0.004757   \n",
             "\n",
-            "   hour  minute  bright  steamy  \n",
-            "0    17      51       1       1  \n",
-            "1    17      51       1       1  \n",
-            "2    17      53       1       1  \n",
-            "3    17      54       1       1  \n",
-            "4    17      55       1       1  \n"
+            "   Occupancy day_of_week  hour  minute  bright  steamy  \n",
+            "0          1   Wednesday    17      51       1       1  \n",
+            "1          1   Wednesday    17      51       1       1  \n",
+            "2          1   Wednesday    17      53       1       1  \n",
+            "3          1   Wednesday    17      54       1       1  \n",
+            "4          1   Wednesday    17      55       1       1  \n"
           ]
         }
       ]
